syntax = "proto3";
package user;

option go_package = "nfxid/protos/gen/auth/user;userpb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "auth/role.proto";
import "auth/profile.proto";

// 用户状态枚举
enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0; // 未指定状态
  USER_STATUS_PENDING = 1; // 待激活
  USER_STATUS_ACTIVE = 2; // 正常
  USER_STATUS_DEACTIVE = 3; // 停用
}

// 用户信息
message User {
  string id = 1; // 用户ID (UUID)
  string username = 2; // 用户名
  string email = 3; // 邮箱
  string phone = 4; // 手机号
  UserStatus status = 5; // 用户状态：pending, active, deactive
  bool is_verified = 6; // 是否已验证
  optional google.protobuf.Timestamp last_login_at = 7; // 最后登录时间
  google.protobuf.Timestamp created_at = 8; // 创建时间
  google.protobuf.Timestamp updated_at = 9; // 更新时间
  optional google.protobuf.Timestamp deleted_at = 10; // 软删除时间
  
  // 嵌套的角色信息（多对多关系，通过 user_roles 表关联）
  repeated role.Role roles = 20;
  
  // 嵌套的资料信息
  profile.Profile profile = 21;
}

// User 服务 - 供其他服务通过 gRPC 管理用户
service UserService {
  // 根据ID获取用户
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse);
  
  // 根据用户名获取用户
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
  
  // 根据邮箱获取用户
  rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse);
  
  // 根据手机号获取用户
  rpc GetUserByPhone (GetUserByPhoneRequest) returns (GetUserByPhoneResponse);
  
  // 批量获取用户
  rpc BatchGetUsers (BatchGetUsersRequest) returns (BatchGetUsersResponse);
  
  // 检查用户是否存在
  rpc CheckUserExists (CheckUserExistsRequest) returns (CheckUserExistsResponse);
}

// User Service Messages
message GetUserByIDRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
  optional bool include_role = 2; // 是否包含角色信息
  optional bool include_profile = 3; // 是否包含资料信息
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  string username = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 50];
  optional bool include_role = 2;
  optional bool include_profile = 3;
}

message GetUserByUsernameResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1 [(buf.validate.field).string.email = true];
  optional bool include_role = 2;
  optional bool include_profile = 3;
}

message GetUserByEmailResponse {
  User user = 1;
}

message GetUserByPhoneRequest {
  string phone = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 20];
  optional bool include_role = 2;
  optional bool include_profile = 3;
}

message GetUserByPhoneResponse {
  User user = 1;
}

message BatchGetUsersRequest {
  repeated string user_ids = 1 [(buf.validate.field).repeated = {min_items: 1, max_items: 100}];
  optional bool include_role = 2;
  optional bool include_profile = 3;
}

message BatchGetUsersResponse {
  repeated User users = 1;
  map<string, string> error_by_id = 2; // user_id -> error_message
}

message CheckUserExistsRequest {
  optional string username = 1;
  optional string email = 2;
  optional string phone = 3;
}

message CheckUserExistsResponse {
  bool exists = 1;
  string field = 2; // "username", "email", "phone" 或空字符串
}

